[package]
name = "utils"
version = "0.1.0"
authors = ["Tre' Seymour <wayne.seymour@elastic.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
crate-type = ["cdylib"]  # Impacts how things are link in compilation.
